# Tesi-PoliTO

./: README.md  pyproject.toml
data/manual/: tickers_italia_moderni.csv
data/processed/: company_info_italy_2015_2024.csv  data_quality_summary_italy_2015_2024.xlsx  market_cap_matrix_italy_2015_2024.csv  portfolio_returns_all_methods_with_costs_taxes.csv  portfolio_values_all_methods_with_costs_taxes.csv  returns_final_for_mst_italy_2015_2024.csv  returns_matrix_italy_2015_2024.csv  traded_money_matrix_italy_2015_2024.csv
data/raw/: A2A_A2A.MI_raw.csv  AMP_AMP.MI_raw.csv  AZM_AZM.MI_raw.csv  BAMI_BAMI.MI_raw.csv  BC_BC.MI_raw.csv  BMED_BMED.MI_raw.csv  BMPS_BMPS.MI_raw.csv  BPE_BPE.MI_raw.csv  BZU_BZU.MI_raw.csv  CPR_CPR.MI_raw.csv  DIA_DIA.MI_raw.csv  ENEL_ENEL.MI_raw.csv  ENI_ENI.MI_raw.csv  ERG_ERG.MI_raw.csv  FBK_FBK.MI_raw.csv  G_G.MI_raw.csv  HER_HER.MI_raw.csv  IG_IG.MI_raw.csv  INW_INW.MI_raw.csv  IP_IP.MI_raw.csv  ISP_ISP.MI_raw.csv  LDO_LDO.MI_raw.csv  MB_MB.MI_raw.csv  MONC_MONC.MI_raw.csv  NEXI_NEXI.MI_raw.csv  PIRC_PIRC.MI_raw.csv  PRY_PRY.MI_raw.csv  PST_PST.MI_raw.csv  RACE_RACE.MI_raw.csv  REC_REC.MI_raw.csv  SPM_SPM.MI_raw.csv  SRG_SRG.MI_raw.csv  STLAM_STLAM.MI_raw.csv  STM_STMMI.MI_raw.csv  TEN_TEN.MI_raw.csv  TIT_TIT.MI_raw.csv  TRN_TRN.MI_raw.csv  UCG_UCG.MI_raw.csv  UNI_UNI.MI_raw.csv  failed_downloads.csv  (+2 more)
notebooks/: download_dati.ipynb  portfolio_strategy_mst_vs_marketcap_all_methods.ipynb
outputs/tables/: mst_figures_all_methods_by_year.xlsx  mst_selected_stocks_all_methods_with_costs_taxes.xlsx  sector_color_legend.xlsx  (+6 more)
(+9 files in other folders)
