[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-backtester"
version = "0.1.0"
description = "Backtester per strategie di portafoglio basate su Minimum Spanning Tree"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "networkx",
    "matplotlib",
    "openpyxl"
]

[tool.setuptools.packages.find]
where = ["src"]